# bandit-study

./: 00_basic.md  01_epsilon_greedy.md  02_ucb.md  03_thomson_sampling.md  Makefile  README.md  TODO.md  pyproject.toml
blog/: Artwork Personalization at Netflix.md
notebook/: epsilon_greedy.ipynb  thomson_sampling.ipynb  ucb.ipynb
paper/: A Batched Multi-Armed Bandit Approach to News Headline Testing, 2019.md  A Contextual-Bandit Approach to Personalized News Article Recommendation, 2012.md  An Efficient Bandit Algorithm for Realtime Multivariate Optimization, 2018 Amazon.md  Carousel Personalization in Music Streaming Apps with Contextual Bandits, 2020.md  Contextual User Browsing Bandits for Large-Scale Online Mobile Recommendation, 2020 Alibaba.md  Contextual-Bandit Based Personalized Recommendation with Time-Varying User Interests.md  Deep Bayesian Bandits: Exploring in Online Personalized Recommendations, 2020 Twitter.md  Deep neural network marketplace recommenders in online experiments, 2018.md  Explore, Exploit, and Explain: Personalizing Explainable Recommendations with Bandits, 2018.md
src/carousel_bandit/: README.md  env.py  main.py  policy.py  run.ipynb
