[tool.poetry]
name = "bandit-study"
version = "1.0.0"
description = ""
authors = ["minsoo9506"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
