[tool.poetry]
name = "bandit-study"
version = "1.0.0"
description = ""
authors = ["minsoo9506"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^25.1.0"}
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
